// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@discordia/help-default help message should include the provided bot name 1`] = `"All commands are written in the form \`MOCK_BOT_NAME {command}\`:"`;

exports[`@discordia/help-default help message should not include the action if the description is missing 1`] = `"All commands are written in the form \`MOCK_BOT_NAME {command}\`:"`;

exports[`@discordia/help-default help message should return a string that includes the accessor(s) if all three types are provided 1`] = `
"All commands are written in the form \`MOCK_BOT_NAME {command}\`:
-------------------------
**Command**: \`MOCK_ACCESOR_0\`

MOCK_DESCRIPTION
-------------------------
**Command**: \`MOCK_ACCESOR_1\` | \`MOCK_ACCESSOR_2\`

MOCK_DESCRIPTION
-------------------------
**Command**: \`{Dynamic Accessor}\`

MOCK_DESCRIPTION"
`;

exports[`@discordia/help-default help message should return a string that includes the accessor(s) if the accessor is a Function 1`] = `
"All commands are written in the form \`MOCK_BOT_NAME {command}\`:
-------------------------
**Command**: \`{Dynamic Accessor}\`

MOCK_DESCRIPTION"
`;

exports[`@discordia/help-default help message should return a string that includes the accessor(s) if the accessor is a String 1`] = `
"All commands are written in the form \`MOCK_BOT_NAME {command}\`:
-------------------------
**Command**: \`MOCK_ACCESOR_0\`

MOCK_DESCRIPTION"
`;

exports[`@discordia/help-default help message should return a string that includes the accessor(s) if the accessor is an Array 1`] = `
"All commands are written in the form \`MOCK_BOT_NAME {command}\`:
-------------------------
**Command**: \`MOCK_ACCESOR_1\` | \`MOCK_ACCESSOR_2\`

MOCK_DESCRIPTION"
`;
